[package]
name = "jsonbank"
version = "0.1.8"
edition = "2021"
homepage = "https://docs.jsonbank.io/sdks/rust"
repository = "https://github.com/jsonbankio/rust-sdk"
authors = ["Trapcodeio <hello@trapcode.io>"]
description = "JsonBank.io Rust SDK"
license = "MIT"
readme = "README.md"
keywords = ["jsonbank", "sdk", "rust"]
exclude = [
    ".idea/**/*",
    ".vscode/**/*",
    "tests/**/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.160"
serde_json = "1.0"

# Test only dependencies
[dev-dependencies]
dotenv = "0.15.0"

